modified folder structure

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@
 }
 body {
   margin: 0;
-  background: url("../src/assets/bg.jpg");
+  background: url("../src/assets/images/bg.jpg");
   background-repeat: no-repeat;
   background-position: left;
 }
